option optimize_for = SPEED;

import "ProtoFiles/common.proto";

package proto_profile;

enum PlayerClasses
{
  TypeA = 1;
  TypeB = 2;
  TypeC = 3;
}

message ClassInfo
{
  required PlayerClasses class = 1;
}

message UserInfo
{
  required int32 coins = 1;
  required int32 premium_coins = 2;
  repeated ClassInfo classesInfo = 3;
  required string name = 4;
  
  extend proto_common.Event 
  {
    optional proto_profile.UserInfo user_info_evt = 1001;
  }
}

message ChangeNickname
{
  message Request
  {
    required string name = 1;
    
    extend proto_common.Request
    {
      optional proto_profile.ChangeNickname.Request chn_nick_req = 2012;
    }
  }
  
  message Response 
  {
    required bool success = 2;
    
    extend proto_common.Response
    {
      optional proto_profile.ChangeNickname.Response chn_nick_req = 2012;
    }
  }
}